--- a/views/find.ejs
+++ b/views/find.ejs
@@ -1,8 +1,7 @@
 <%- include("partials/header"); -%> 
 
- 
-
-
-
+ <h1>Welcome To the find section</h1>
+<h2>Here you can translate words and phrases you do not know</h2>
+<input type="text" placeholder="Search.." class="finder" />
 
  <%- include("partials/footer"); -%> 
