--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header"); -%> 
 
- 
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint nisi velit aperiam, unde totam commodi id inventore, tempora similique quaerat dolores accusantium error ad! In repudiandae vero cupiditate velit facilis.lor
 
 
 
