--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,7 +6,7 @@
     <!-- custom js -->
     <script src="javascript/countries.js"></script>
     <script src="javascript/script.js"></script>
-    
+    <script src="javascript/find.js"></script>
    
 </body>
 </html>
